k8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: client
